# zero-effort

./: .gitignore  README.md  pyproject.toml  requirements.txt
zero_effort/: __main__.py  console.py
zero_effort/tools/: secretsdump.py  wmiexec.py
